src/test/data/tests/const/invalid/postfix.c
int test_value = 10++;

int main(void) {
    return test_value;
}
